@@ -69,7 +69,7 @@ void FFTFrame::multiply(const FFTFrame& frame)
     ASSERT_NOT_REACHED();
 }
 
-void FFTFrame::doFFT(float* data)
+void FFTFrame::doFFT(const float* data)
 {
     ASSERT_NOT_REACHED();
 }
