@@ -1,3 +1,12 @@
+2012-07-19  Wei James  <james.wei@intel.com>
+
+        enable Web Audio for chromium android port
+        https://bugs.webkit.org/show_bug.cgi?id=89428
+
+        Reviewed by Kenneth Russell.
+
+        * features.gypi:
+
 2012-07-19  Adam Barth  <abarth@webkit.org>
 
         [Chromium] Support external autofill popups
